--- a/package.json
+++ b/package.json
@@ -1,3 +1,15 @@
 {
-  "name": "hardhat-project"
+  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^4.0.0-alpha.0",
+    "ethers": "^5.6.1",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  }
 }
